[Collections:List] Create immutable collection from stream